# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.
[package]
name = "deno_core"
version = "0.149.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"
description = "A modern JavaScript/TypeScript runtime built with V8, Rust, and Tokio"

[lib]
path = "lib.rs"

[features]
default = ["v8_use_custom_libcxx"]
v8_use_custom_libcxx = ["v8/use_custom_libcxx"]

[dependencies]
anyhow = "1.0.57"
deno_ops = { path = "../ops", version = "0.27.0" }
futures = "0.3.21"
# Stay on 1.6 to avoid a dependency cycle in ahash https://github.com/tkaitchuck/aHash/issues/95
# Projects not depending on ahash are unafected as cargo will pull any 1.X that is >= 1.6.
indexmap = "1.6"
libc = "0.2.126"
log = "0.4.16"
once_cell = "1.10.0"
parking_lot = "0.12.0"
pin-project = "1.0.11"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde_v8 = { version = "0.60.0", path = "../serde_v8" }
sourcemap = "=6.0.1"
url = { version = "2.3.1", features = ["serde"] }
v8 = { version = "0.49.0", default-features = false }

[[example]]
name = "http_bench_json_ops"
path = "examples/http_bench_json_ops.rs"

# These dependencies are only used for the 'http_bench_*_ops' examples.
[dev-dependencies]
deno_ast = { version = "0.19.0", features = ["transpiling"] }
tokio = { version = "1.19", features = ["full"] }
