# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_core"
version = "0.191.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A modern JavaScript/TypeScript runtime built with V8, Rust, and Tokio"

[lib]
path = "lib.rs"

[features]
default = ["v8_use_custom_libcxx"]
v8_use_custom_libcxx = ["v8/use_custom_libcxx"]
# Enable to exclude JS sources from the binary (e.g. if they are already snapshotted).
exclude_js_sources = []
# Read JS sources at 'runtime' instead of statically including them. Only to be used
# in build and dev scripts. Overrides `exclude_js_sources`.
runtime_js_sources = ["exclude_js_sources"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
deno_ops.workspace = true
futures.workspace = true
# Stay on 1.6 to avoid a dependency cycle in ahash https://github.com/tkaitchuck/aHash/issues/95
# Projects not depending on ahash are unafected as cargo will pull any 1.X that is >= 1.6.
indexmap = "1.6"
libc.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_v8.workspace = true
smallvec.workspace = true
sourcemap = "6.1"
tokio.workspace = true
url.workspace = true
v8.workspace = true

[[example]]
name = "http_bench_json_ops"
path = "examples/http_bench_json_ops/main.rs"

[dev-dependencies]
deno_core = { workspace = true, features = ["runtime_js_sources"] }

# These dependencies are only used for the 'http_bench_*_ops' examples.
deno_ast.workspace = true
